--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -604,6 +604,7 @@
 }
 
 @Online{RiscvSpecFormal,
+    label = {SiF},
     title = {Formal Specification of RISC-V ISA in Kami},
     organization = {SiFive},
     url = {https://github.com/sifive/RiscvSpecFormal},
