--- a/thesis/sections/discussion.tex
+++ b/thesis/sections/discussion.tex
@@ -263,7 +263,6 @@ It will now be investigated whether this work is touched by aforementioned two i
 
 First, it will be investigated whether a circular argument has been made in this thesis.
 Recall the steps that have been taken to verify the MINRV8 architecture against the information flow properties:
-\todo{Cite respective sections}
 \begin{enumerate}
     \item \label{itm:step-minrv}
     Specify the MINRV8 architecture based on RISC-V
@@ -272,7 +271,7 @@ Recall the steps that have been taken to verify the MINRV8 architecture against 
     \item \label{itm:step-properties}
     Use fields not being propagated in the information flow semantics and some intuition to state information flow properties
     \item \label{itm:step-loop}
-    Enter a proof-refine-loop until a fixpoint has been reached
+    Enter a prove-refine loop until a fixpoint has been reached
     \item \label{itm:step-canaries}
     Test the model by subjecting it to vulnerabilities
 \end{enumerate}
