--- a/thesis/sections/related.tex
+++ b/thesis/sections/related.tex
@@ -101,8 +101,8 @@ Coincidentally, the authors focus on the SYSRET vulnerability to the x86 archite
 Their goal is to prove the absence of SYSRET-like vulnerabilities which is expressed as the property: never can the processor be in privileged mode when at the same time the stack pointer, base pointer or instruction pointer are controlled by user-mode.
 
 In their methodology, the authors first identify a group of vulnerable instructions which might lead to such a state by being interrupted.
-\todo{mention: only mode transition instructions}
-They then model these instructions alongside with all state touched by these instructions.
+Eight instructions were identified as such - all of them being \minrv{Ecall}/\minrv{Mret} equivalents.
+The authors then model these instructions alongside with all state touched by these instructions.
 By sparsely constraining the initial state of the model they finally prove: for all initial states, there is no direct successor state where a general protection fault has been thrown and one of the stack, base or instruction pointers is controlled by user-mode.
 The authors claim that by the constraints chosen for the initial states of the model, these states actually embody an over-approximation of all reachable states of the x86 architecture.
 With this methodology, the authors manage to correctly find that Intel's version of the x86 architecture is vulnerable to the SYSRET vulnerability while AMD's version is not.
