thesis: Title page is in line with requirements

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -161,21 +161,23 @@
     {\huge\bfseries Model Checking Information Flow Control Policies on Instruction Set Architectures} \par
     \vspace{1.5cm}
     {\scshape\Large Masterarbeit} \par
-    \vspace{0.3cm}
-    {\large Leipzig, \today} \par
-    \vspace {1.5cm}
-    {
+    \vspace{1.8cm}
+    \begin{multicols}{2}
+        Leipzig, \today \par
+        \columnbreak
         vorgelegt von: \par
         Felix Linker \par
         M.Sc. Informatik
-    }
+    \end{multicols}
     \vfill
     \begin{multicols}{2}
         Betreuender Hochschullehrer: \par
         Prof. Dr. Martin Bogdan \par
+        Abteilung Technische Informatik \par
         \columnbreak
         Zweitbetreut durch: \par
-        Jörn Hoffmann
+        Jörn Hoffmann \par
+        Abteilung Technische Informatik
     \end{multicols}
 \end{titlepage}
 
