--- a/thesis/sections/results.tex
+++ b/thesis/sections/results.tex
@@ -269,6 +269,7 @@ In this section, it will be presented how the model of the MINRV8 architecture w
 By default, the MINRV8 architecture is not vulnerable to these attacks, however, making the architecture vulnerable will put the approach of this thesis to formally verify an instruction set architecture to a test.
 
 \subsection{Cache Poisoning Attack on x86}
+\label{sec:cache-poisoning}
 
 The cache poisoning attack\footnote{%
     The name \enquote{cache poisoning attack} is not official.
