--- a/thesis/sections/model.tex
+++ b/thesis/sections/model.tex
@@ -507,9 +507,32 @@ The domain of confidentiality has yet been left out so we will introduce one fin
 
 \section{Summary}
 
-\todo[inline]{Write}
+In this chapter, information flow semantics were given for each instruction of the MINRV8 architecture and it was described how these were implemented in nuXmv.
+It was shown that the to domains of confidentiality and integrity of the information flow policy can be tacked independently where the $ \sqcup $ operation on confidentiality labels is given by the logical disjunction and on integrity labels by the logical conjunction.
 
-\todo{Use graphic}
+Labels of arguments to some instructions that are not used by their respective information flow semantics were used to constitute the first information flow properties regarding integrity of instructions.
+Additionally, the \smv{priv} variable was considered when defining a property touching the confidentiality of data.
+In the end, all variables of the main module and all labels of arguments to instructions were considered such that they either lead to an information flow property or are used to determine information flow in the model.
+
+The properties that were finally established are:
+\begin{enumerate}[label=\Roman*.]
+    \item \smv{MEMORY_OP_INTEGRITY}; whenever a memory operation is performed in privileged mode, the target address must be integrous.
+    \item \smv{CSR_INTEGRTY}; whenever a \gls{csr} is written, the value it is written with must be integrous.
+    \item \smv{NO_LEAK}; whenever the architecture is in user mode, there is no confidential data in any register.
+\end{enumerate}
+
 \begin{figure}
     \includegraphics[width=\textwidth]{figures/properties.png}
+    \caption{Visualization of the Information Flow Properties}
+    \label{fig:ifc-properties}
 \end{figure}
+
+These properties are visualized in figure \ref{fig:ifc-properties} inspired by digital timing diagrams.
+The last row visualizes the privilege mode of the architecture over the course of executing a sequence of instructions.
+There are two points in which the privilege mode changes: first, it goes from machine- to user-mode, then it goes back from user- to machine-mode.
+The \smv{NO_LEAK} (\ref{itm:prop-no-leak}) mandates that the confidentiality labels of the registers always resemble the first row in the diagram, i.e. they are only high when the current privilege mode also is high.
+The green areas highlight where the registers could contain confidential data, i.e. the confidentiality  labels \textit{could} be high, but the orange areas highlight the point in time where the confidentiality labels \textit{must} be low.
+The properties \smv{MEMORY_OP_INTEGRITY} (\ref{itm:prop-mem-i}) and \smv{CSR_INTEGRITY} (\ref{itm:prop-csr-i}) follow the same visualization.
+In the second row of the figure, it is visualized whether inputs to memory or \gls{csr} related instructions are integrous.
+The integrity labels to input of these instructions must be high, whenever the architecture is in machine-mode and can be low if the architecture is on user-mode.
+Analogously, the green areas mark where the integrity labels \textit{could} be low but the orange areas indicate where it \textit{must} be high.
